@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
+  GIRAPH-613: Remove Writable from the interfaces implemented by Vertex (claudio)
+
   GIRAPH-543: Fix PageRankBenchmark and make WeightedPageRankBenchmark (majakabiljo)
 
   GIRAPH-615: Add support for multithreaded output (majakabiljo)
